src/main/java/fr/kubys/leekscriptv4/parser/LeekScriptParser.java
// This is a generated file. Not intended for manual editing.
package fr.kubys.leekscriptv4.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static fr.kubys.leekscriptv4.psi.LSTypes.*;
import static fr.kubys.leekscriptv4.parser.LeekScriptParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class LeekScriptParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return program(b, l + 1);
  }

  /* ********************************************************** */
  // additiveOperator multiplicativeExpressionWrapper
  public static boolean additiveExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpression")) return false;
    if (!nextTokenIs(b, "<additive expression>", OP_MINUS, OP_PLUS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, ADDITIVE_EXPRESSION, "<additive expression>");
    r = additiveOperator(b, l + 1);
    r = r && multiplicativeExpressionWrapper(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // multiplicativeExpressionWrapper additiveExpression*
  static boolean additiveExpressionWrapper(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpressionWrapper")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = multiplicativeExpressionWrapper(b, l + 1);
    r = r && additiveExpressionWrapper_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // additiveExpression*
  private static boolean additiveExpressionWrapper_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpressionWrapper_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!additiveExpression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "additiveExpressionWrapper_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '+' | '-'
  static boolean additiveOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveOperator")) return false;
    if (!nextTokenIs(b, "", OP_MINUS, OP_PLUS)) return false;
    boolean r;
    r = consumeToken(b, OP_PLUS);
    if (!r) r = consumeToken(b, OP_MINUS);
    return r;
  }

  /* ********************************************************** */
  // singleExpressionPart (',' singleExpressionPart)*
  public static boolean argumentList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT_LIST, "<argument list>");
    r = singleExpressionPart(b, l + 1);
    r = r && argumentList_1(b, l + 1);
    exit_section_(b, l, m, r, false, LeekScriptParser::singleExpressionRecover);
    return r;
  }

  // (',' singleExpressionPart)*
  private static boolean argumentList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argumentList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argumentList_1", c)) break;
    }
    return true;
  }

  // ',' singleExpressionPart
  private static boolean argumentList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_COMMA);
    r = r && singleExpressionPart(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '(' argumentList? ')'
  public static boolean arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments")) return false;
    if (!nextTokenIs(b, OP_LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_LPAREN);
    r = r && arguments_1(b, l + 1);
    r = r && consumeToken(b, OP_RPAREN);
    exit_section_(b, m, ARGUMENTS, r);
    return r;
  }

  // argumentList?
  private static boolean arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1")) return false;
    argumentList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '[' (keyvalList | elementList)? ']'
  public static boolean arrayLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral")) return false;
    if (!nextTokenIs(b, OP_LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_LBRACKET);
    r = r && arrayLiteral_1(b, l + 1);
    r = r && consumeToken(b, OP_RBRACKET);
    exit_section_(b, m, ARRAY_LITERAL, r);
    return r;
  }

  // (keyvalList | elementList)?
  private static boolean arrayLiteral_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1")) return false;
    arrayLiteral_1_0(b, l + 1);
    return true;
  }

  // keyvalList | elementList
  private static boolean arrayLiteral_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1_0")) return false;
    boolean r;
    r = keyvalList(b, l + 1);
    if (!r) r = elementList(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // assignmentOperator ternaryExpressionWrapper
  public static boolean assignExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignExpression")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, ASSIGN_EXPRESSION, "<assign expression>");
    r = assignmentOperator(b, l + 1);
    p = r; // pin = 1
    r = r && ternaryExpressionWrapper(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ternaryExpressionWrapper assignExpression*
  static boolean assignExpressionWrapper(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignExpressionWrapper")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ternaryExpressionWrapper(b, l + 1);
    r = r && assignExpressionWrapper_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // assignExpression*
  private static boolean assignExpressionWrapper_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignExpressionWrapper_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!assignExpression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "assignExpressionWrapper_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '=' | '+=' | '-=' | '*=' | '/=' | '&=' | '|=' | '^='
  static boolean assignmentOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentOperator")) return false;
    boolean r;
    r = consumeToken(b, OP_ASSIGN);
    if (!r) r = consumeToken(b, OP_PLUS_EQ);
    if (!r) r = consumeToken(b, OP_MINUS_EQ);
    if (!r) r = consumeToken(b, OP_TIMES_EQ);
    if (!r) r = consumeToken(b, OP_DIVIDE_EQ);
    if (!r) r = consumeToken(b, OP_AND_EQ);
    if (!r) r = consumeToken(b, OP_OR_EQ);
    if (!r) r = consumeToken(b, OP_XOR_EQ);
    return r;
  }

  /* ********************************************************** */
  // bitwiseOperator shiftExpressionWrapper
  public static boolean bitwiseExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, BITWISE_EXPRESSION, "<bitwise expression>");
    r = bitwiseOperator(b, l + 1);
    r = r && shiftExpressionWrapper(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // shiftExpressionWrapper bitwiseExpression*
  static boolean bitwiseExpressionWrapper(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseExpressionWrapper")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = shiftExpressionWrapper(b, l + 1);
    r = r && bitwiseExpressionWrapper_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // bitwiseExpression*
  private static boolean bitwiseExpressionWrapper_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseExpressionWrapper_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!bitwiseExpression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bitwiseExpressionWrapper_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '&' | '^' | '|'
  static boolean bitwiseOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseOperator")) return false;
    boolean r;
    r = consumeToken(b, OP_BINARY_AND);
    if (!r) r = consumeToken(b, OP_XOR);
    if (!r) r = consumeToken(b, OP_BINARY_OR);
    return r;
  }

  /* ********************************************************** */
  // '{' statementList? '}'
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, OP_LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_LBRACE);
    r = r && block_1(b, l + 1);
    r = r && consumeToken(b, OP_RBRACE);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  // statementList?
  private static boolean block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_1")) return false;
    statementList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'break' eos
  public static boolean breakStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "breakStatement")) return false;
    if (!nextTokenIs(b, KW_BREAK)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BREAK_STATEMENT, null);
    r = consumeToken(b, KW_BREAK);
    p = r; // pin = 1
    r = r && eos(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // (comparisonOperator | equalityOperator) bitwiseExpressionWrapper
  public static boolean compareExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, COMPARE_EXPRESSION, "<compare expression>");
    r = compareExpression_0(b, l + 1);
    r = r && bitwiseExpressionWrapper(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // comparisonOperator | equalityOperator
  private static boolean compareExpression_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpression_0")) return false;
    boolean r;
    r = comparisonOperator(b, l + 1);
    if (!r) r = equalityOperator(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // bitwiseExpressionWrapper compareExpression*
  static boolean compareExpressionWrapper(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpressionWrapper")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = bitwiseExpressionWrapper(b, l + 1);
    r = r && compareExpressionWrapper_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // compareExpression*
  private static boolean compareExpressionWrapper_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpressionWrapper_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!compareExpression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "compareExpressionWrapper_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '<=' | '>=' | '<' | '>'
  static boolean comparisonOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparisonOperator")) return false;
    boolean r;
    r = consumeToken(b, OP_LE);
    if (!r) r = consumeToken(b, OP_GE);
    if (!r) r = consumeToken(b, OP_LT);
    if (!r) r = consumeToken(b, OP_GT);
    return r;
  }

  /* ********************************************************** */
  // 'continue' eos
  public static boolean continueStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "continueStatement")) return false;
    if (!nextTokenIs(b, KW_CONTINUE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONTINUE_STATEMENT, null);
    r = consumeToken(b, KW_CONTINUE);
    p = r; // pin = 1
    r = r && eos(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'do' (block | statement) whileCondition eos
  public static boolean doWhileStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doWhileStatement")) return false;
    if (!nextTokenIs(b, KW_DO)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DO_WHILE_STATEMENT, null);
    r = consumeToken(b, KW_DO);
    p = r; // pin = 1
    r = r && report_error_(b, doWhileStatement_1(b, l + 1));
    r = p && report_error_(b, whileCondition(b, l + 1)) && r;
    r = p && eos(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // block | statement
  private static boolean doWhileStatement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doWhileStatement_1")) return false;
    boolean r;
    r = block(b, l + 1);
    if (!r) r = statement(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // singleExpression (',' singleExpression)*
  public static boolean elementList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elementList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ELEMENT_LIST, "<element list>");
    r = singleExpression(b, l + 1);
    r = r && elementList_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' singleExpression)*
  private static boolean elementList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elementList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!elementList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "elementList_1", c)) break;
    }
    return true;
  }

  // ',' singleExpression
  private static boolean elementList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elementList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_COMMA);
    r = r && singleExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'else' (block | statement)
  public static boolean elseBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseBlock")) return false;
    if (!nextTokenIs(b, KW_ELSE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ELSE_BLOCK, null);
    r = consumeToken(b, KW_ELSE);
    p = r; // pin = 1
    r = r && elseBlock_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // block | statement
  private static boolean elseBlock_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elseBlock_1")) return false;
    boolean r;
    r = block(b, l + 1);
    if (!r) r = statement(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // ';'
  public static boolean emptyStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "emptyStatement")) return false;
    if (!nextTokenIs(b, OP_SEMICOLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_SEMICOLON);
    exit_section_(b, m, EMPTY_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // ';'
  public static boolean eos(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eos")) return false;
    if (!nextTokenIs(b, OP_SEMICOLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_SEMICOLON);
    exit_section_(b, m, EOS, r);
    return r;
  }

  /* ********************************************************** */
  // '===' | '==' | '!==' | '!='
  static boolean equalityOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalityOperator")) return false;
    boolean r;
    r = consumeToken(b, OP_IDENTITY_EQUALS);
    if (!r) r = consumeToken(b, OP_EQUALS);
    if (!r) r = consumeToken(b, OP_IDENTITY_NOT_EQUALS);
    if (!r) r = consumeToken(b, OP_NOT_EQUALS);
    return r;
  }

  /* ********************************************************** */
  // singleExpression eos
  public static boolean expressionStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expressionStatement")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_STATEMENT, "<expression statement>");
    r = singleExpression(b, l + 1);
    p = r; // pin = 1
    r = r && eos(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'var'? referenceExpression
  public static boolean forInitializer(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forInitializer")) return false;
    if (!nextTokenIs(b, "<for initializer>", IDENTIFIER, KW_VAR)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FOR_INITIALIZER, "<for initializer>");
    r = forInitializer_0(b, l + 1);
    r = r && referenceExpression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // 'var'?
  private static boolean forInitializer_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forInitializer_0")) return false;
    consumeToken(b, KW_VAR);
    return true;
  }

  /* ********************************************************** */
  // 'for' '(' forInitializer ((':' forInitializer)? 'in' singleExpression | initialiser ';' singleExpression ';' singleExpression) ')' (block | statement)
  public static boolean forStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forStatement")) return false;
    if (!nextTokenIs(b, KW_FOR)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FOR_STATEMENT, null);
    r = consumeTokens(b, 1, KW_FOR, OP_LPAREN);
    p = r; // pin = 1
    r = r && report_error_(b, forInitializer(b, l + 1));
    r = p && report_error_(b, forStatement_3(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, OP_RPAREN)) && r;
    r = p && forStatement_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (':' forInitializer)? 'in' singleExpression | initialiser ';' singleExpression ';' singleExpression
  private static boolean forStatement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forStatement_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = forStatement_3_0(b, l + 1);
    if (!r) r = forStatement_3_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (':' forInitializer)? 'in' singleExpression
  private static boolean forStatement_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forStatement_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = forStatement_3_0_0(b, l + 1);
    r = r && consumeToken(b, KW_IN);
    r = r && singleExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (':' forInitializer)?
  private static boolean forStatement_3_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forStatement_3_0_0")) return false;
    forStatement_3_0_0_0(b, l + 1);
    return true;
  }

  // ':' forInitializer
  private static boolean forStatement_3_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forStatement_3_0_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_COLON);
    r = r && forInitializer(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // initialiser ';' singleExpression ';' singleExpression
  private static boolean forStatement_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forStatement_3_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = initialiser(b, l + 1);
    r = r && consumeToken(b, OP_SEMICOLON);
    r = r && singleExpression(b, l + 1);
    r = r && consumeToken(b, OP_SEMICOLON);
    r = r && singleExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // block | statement
  private static boolean forStatement_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "forStatement_5")) return false;
    boolean r;
    r = block(b, l + 1);
    if (!r) r = statement(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // parameter (',' parameter)*
  public static boolean formalParameterList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formalParameterList")) return false;
    if (!nextTokenIs(b, "<formal parameter list>", IDENTIFIER, OP_REFERENCE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FORMAL_PARAMETER_LIST, "<formal parameter list>");
    r = parameter(b, l + 1);
    r = r && formalParameterList_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' parameter)*
  private static boolean formalParameterList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formalParameterList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!formalParameterList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "formalParameterList_1", c)) break;
    }
    return true;
  }

  // ',' parameter
  private static boolean formalParameterList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "formalParameterList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_COMMA);
    r = r && parameter(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'function' functionName '(' formalParameterList? ')' block
  public static boolean functionDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "functionDeclaration")) return false;
    if (!nextTokenIs(b, KW_FUNCTION)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_DECLARATION, null);
    r = consumeToken(b, KW_FUNCTION);
    p = r; // pin = 1
    r = r && report_error_(b, functionName(b, l + 1));
    r = p && report_error_(b, consumeToken(b, OP_LPAREN)) && r;
    r = p && report_error_(b, functionDeclaration_3(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, OP_RPAREN)) && r;
    r = p && block(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // formalParameterList?
  private static boolean functionDeclaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "functionDeclaration_3")) return false;
    formalParameterList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'function' '(' formalParameterList? ')' block
  public static boolean functionExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "functionExpression")) return false;
    if (!nextTokenIs(b, KW_FUNCTION)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_EXPRESSION, null);
    r = consumeTokens(b, 1, KW_FUNCTION, OP_LPAREN);
    p = r; // pin = 1
    r = r && report_error_(b, functionExpression_2(b, l + 1));
    r = p && report_error_(b, consumeToken(b, OP_RPAREN)) && r;
    r = p && block(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }
